[add]虚拟机学习记录